tests/cases/compiler-development/artifact/errors/diagnostic-union-by-missing-segment.ari
struct Header {
  kind: i64,
}

struct Packet {
  header: Header,
  fragment: union by header.missing {
    text => i64,
  },
}

fn main() -> i64 {
  return 0;
}
